crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__schema_doc_hover_test1.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Array(
            [
                String(
                    "__main__",
                ),
                LanguageString(
                    LanguageString {
                        language: "KCL",
                        value: "schema Person:\n    name: str\n    age?: int",
                    },
                ),
                String(
                    "hover doc test",
                ),
            ],
        ),
        range: None,
    },
)
