crates/tools/src/LSP/src/snapshots/kcl_language_server__hover__tests__schema_optional_attr_hover_test.snap
---
source: crates/tools/src/LSP/src/hover.rs
expression: "format! (\"{:#?}\", res)"
---
Some(
    Hover {
        contents: Array(
            [
                LanguageString(
                    LanguageString {
                        language: "KCL",
                        value: "age: int",
                    },
                ),
                String(
                    "age doc test",
                ),
            ],
        ),
        range: None,
    },
)
